service/tests/models/snapshots/users/can_find_customer_access@users.snap
---
source: tests/models/user.rs
expression: result
---
Ok(
    UserAccess {
        roles: [
            "customer",
        ],
        permissions: [
            "categories:read",
        ],
    },
)
