service/tests/models/snapshots/users/can_find_manager_access@users.snap
---
source: tests/models/user.rs
expression: result
---
Ok(
    UserAccess {
        roles: [
            "manager",
        ],
        permissions: [
            "admin:access",
            "categories:create",
            "categories:delete",
            "categories:read",
            "categories:update",
            "media:create",
            "media:delete",
            "media:read",
            "media:update",
            "orders:read",
            "orders:update",
            "products:create",
            "products:delete",
            "products:read",
            "products:update",
            "users:read",
        ],
    },
)
