service/tests/models/snapshots/users/can_find_support_access@users.snap
---
source: tests/models/user.rs
expression: result
---
Ok(
    UserAccess {
        roles: [
            "support",
        ],
        permissions: [
            "admin:access",
            "categories:read",
            "orders:read",
            "orders:update",
            "products:read",
            "users:read",
        ],
    },
)
