service/tests/models/snapshots/users/can_set_reset_token@users.snap
---
source: tests/models/user.rs
expression: result
---
Ok(
    User {
        id: 11,
        pid: bd6f7c26-d2c9-487e-b837-8f77be468033,
        name: "John Doe",
        email: "john.doe@acme.com",
        image: Some(
            "https://randomuser.me/api/portraits/men/32.jpg",
        ),
        password_hash: "$argon2d$v=19$m=12,t=3,p=1$dzhsemJycHJ4bTAwMDAwMA$gwggLXNwI8OgJmMXSP3Wdg",
        verified_at: Some(
            DATE,
        ),
        verification_token_hash: Some(
            "TOKEN",
        ),
        verification_token_expires_at: Some(
            DATE,
        ),
        reset_token_hash: Some(
            "TOKEN",
        ),
        reset_token_expires_at: Some(
            DATE,
        ),
        created_at: DATE,
        updated_at: DATE,
        deleted_at: None,
    },
)
