service/tests/models/snapshots/users/can_set_verification_token@users.snap
---
source: tests/models/user.rs
expression: result
---
Ok(
    User {
        id: 44,
        pid: 4c008e68-88fa-4072-808e-6888fa60724c,
        name: "Morgan Grimes",
        email: "morgan@silk.io",
        image: Some(
            "https://randomuser.me/api/portraits/women/65.jpg",
        ),
        password_hash: "$argon2d$v=19$m=16,t=2,p=1$cTZhOHVtY2dJTzBqYTBudw$/704JvCsW23pidisyXK+Tw",
        verified_at: None,
        verification_token_hash: Some(
            "TOKEN",
        ),
        verification_token_expires_at: Some(
            DATE,
        ),
        reset_token_hash: None,
        reset_token_expires_at: None,
        created_at: DATE,
        updated_at: DATE,
        deleted_at: None,
    },
)
