service/tests/models/snapshots/users/can_update_profile_name_and_email@users.snap
---
source: tests/models/user.rs
expression: result
---
Ok(
    User {
        id: 11,
        pid: bd6f7c26-d2c9-487e-b837-8f77be468033,
        name: "John Updated",
        email: "john.updated@acme.com",
        image: Some(
            "https://cdn.example.com/users/john_updated.png",
        ),
        password_hash: "PASSWORD",
        verified_at: Some(
            DATE,
        ),
        verification_token_hash: Some(
            "TOKEN",
        ),
        verification_token_expires_at: Some(
            DATE,
        ),
        reset_token_hash: None,
        reset_token_expires_at: None,
        created_at: DATE,
        updated_at: DATE,
        deleted_at: None,
    },
)
